[package]
name = "cargo-nono"
version = "0.1.4"
authors = ["Maximilian Goisser <goisser94@gmail.com>"]
description = "Detect (possible) no_std compatibility of your crate and dependencies"
keywords = ["cargo", "no_std", "nono", "subcommand"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/hobofan/cargo-nono"
documentation = "https://github.com/hobofan/cargo-nono"

[dependencies]
cargo_metadata = "0.6.1"
serde = "1.0.80"
serde_json = "1.0.33"
console = "0.6.2"
syn = { version = "=0.15.18", default-features = false, features = ["full", "extra-traits", "parsing"] }
quote = { version = "0.6.10", default-features = false }
clap = "2.32.0"
proc-macro2 = { version = "0.4.24", default-features = false }
glob = "0.2.11"

[dev-dependencies]
assert_cmd = "0.10.2"

[features]
default = []
proc_macro_spans = []
