[package]
name = "cargo-nono"
version = "0.1.8"
authors = ["Maximilian Goisser <goisser94@gmail.com>"]
description = "Detect (possible) no_std compatibility of your crate and dependencies"
keywords = ["cargo", "no_std", "nono", "subcommand"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/hobofan/cargo-nono"
documentation = "https://github.com/hobofan/cargo-nono"
edition = "2018"

[dependencies]
cargo_metadata = "0.8.2"
serde = "1.0.99"
serde_json = "1.0.40"
console = "0.7.7"
clap = "2.33.0"
glob = "0.3.0"
syn = { version = "1.0.2", default-features = false, features = ["full", "extra-traits", "parsing"] }
quote = { version = "1.0.1", default-features = false }
proc-macro2 = { version = "1.0.1", default-features = false }

[dev-dependencies]
assert_cmd = "0.11.1"

[features]
default = []
proc_macro_spans = []
